--- a/sallyyoussef/multi.ipynb
+++ b/sallyyoussef/multi.ipynb
@@ -1,23 +1,72 @@
-# Program to multiply two matrices using nested loops
-
-# 2x3 matrix
-X = [[1,2,3],
-    [4 ,5,6]]
-# 3x2 matrix
-Y = [[1,2],
-    [3,4],
-    [5,6]]
-# result is 3x4
-result = [[0,0],
-         [0,0]]
-
-# iterate through rows of X
-for i in range(len(X)):
-   # iterate through columns of Y
-   for j in range(len(Y[0])):
-       # iterate through rows of Y
-       for k in range(len(Y)):
-           result[i][j] += X[i][k] * Y[k][j]
-
-for r in result:
-   print(r)
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 28]\n",
+      "[49, 64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Program to multiply two matrices using nested loops\n",
+    "\n",
+    "# 2x3 matrix\n",
+    "X = [[1,2,3],\n",
+    "    [4 ,5,6]]\n",
+    "# 3x2 matrix\n",
+    "Y = [[1,2],\n",
+    "    [3,4],\n",
+    "    [5,6]]\n",
+    "# result is 3x4\n",
+    "result = [[0,0],\n",
+    "         [0,0]]\n",
+    "\n",
+    "# iterate through rows of X\n",
+    "for i in range(len(X)):\n",
+    "   # iterate through columns of Y\n",
+    "   for j in range(len(Y[0])):\n",
+    "       # iterate through rows of Y\n",
+    "       for k in range(len(Y)):\n",
+    "           result[i][j] += X[i][k] * Y[k][j]\n",
+    "\n",
+    "for r in result:\n",
+    "   print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
