--- a/AhmedSabry/MatrixMultiplication.ipynb
+++ b/AhmedSabry/MatrixMultiplication.ipynb
@@ -2,8 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "d956d196",
+   "execution_count": 4,
+   "id": "b7f3c0aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# two dimensional arrays\n",
+    "m1 = np.array([[1,4,7],[2,5,8]])\n",
+    "m2 = np.array([[1,4],[2,5],[3,6]])\n",
+    "m3 = np.dot(m1,m2) \n",
+    "\n",
+    "# three dimensional arrays\n",
+    "mm1 = ([1, 6, 5],[3 ,4, 8],[2, 12, 3]) \n",
+    "mm2 = ([3, 4, 6],[5, 6, 7],[6,56, 7]) \n",
+    "mm3 = np.dot(m1,m2) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "be4c0f87",
    "metadata": {},
    "outputs": [
     {
@@ -11,32 +30,37 @@
      "output_type": "stream",
      "text": [
       "[[30 66]\n",
-      " [36 81]]\n",
-      "[[ 63 320  83]\n",
-      " [ 77 484 102]\n",
-      " [ 84 248 117]]\n"
+      " [36 81]]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "# two dimensional arrays\n",
-    "m1 = np.array([[1,4,7],[2,5,8]])\n",
-    "m2 = np.array([[1,4],[2,5],[3,6]])\n",
-    "m3 = np.dot(m1,m2) \n",
-    "print(m3) \n",
-    "\n",
-    "# three dimensional arrays\n",
-    "m1 = ([1, 6, 5],[3 ,4, 8],[2, 12, 3]) \n",
-    "m2 = ([3, 4, 6],[5, 6, 7],[6,56, 7]) \n",
-    "m3 = np.dot(m1,m2) \n",
-    "print(m3) "
+    "print(m3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae4be62c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[30 66]\n",
+      " [36 81]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mm3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2441dc3b",
+   "id": "0de94db5",
    "metadata": {},
    "outputs": [],
    "source": []
