--- a/AhmedSabry/mean and median.ipynb
+++ b/AhmedSabry/mean and median.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "21f5519d",
+   "id": "f3b1a365",
    "metadata": {},
    "outputs": [
     {
@@ -24,8 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a52902aa",
+   "execution_count": 8,
+   "id": "913edaa5",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
     "    \n",
     "else:\n",
     "    \n",
-    "    median = sist[len(slist)//2]\n",
+    "    med = slist[len(slist)//2]\n",
     "    \n",
     "print(\"result : \" , med)"
    ]
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "944fd575",
+   "id": "ec9f1d10",
    "metadata": {},
    "outputs": [],
    "source": []
