--- a/Youmna Muhammad/Task2_MeanAndMedian.ipynb
+++ b/Youmna Muhammad/Task2_MeanAndMedian.ipynb
@@ -9,22 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 3, 3, 9, 55, 66, 66]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "25.75"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "l1=[1,3,55,66,3,66,3,9]\n",
+    "l1.sort()\n",
+    "print(l1)\n",
     "x=sum(l1)/len(l1)\n",
     "x"
    ]
@@ -38,23 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
     }
    ],
    "source": [
-    "v= l1[int(len(l1)/2)]\n",
-    "v"
+    "if len(l1)%2 ==0:\n",
+    "    x= int(len(l1)/2)\n",
+    "    med1= l1[x]\n",
+    "    med2= l1[x-1]\n",
+    "    med= (med1+med2)/2\n",
+    "else:\n",
+    "    med= l1[len(l1)/2]\n",
+    "print(med)\n"
    ]
   },
   {
