--- a/Hadeel Khaled/Assignment_13_Hypothesis_Testing.ipynb
+++ b/Hadeel Khaled/Assignment_13_Hypothesis_Testing.ipynb
@@ -665,9 +665,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2><center><font color='blue'>Test that average duration for the group <font color='crimson'>experiment</font> is bigger than the average duration in group <font color='crimson'>control</font>:<br><font color='crimson'>Alternative:</font> \n",
-    "Avg(Experiment.duration)-Avg(control.duration)&gt;0<br><font color='crimson'>Null:</font> \n",
-    "Avg(Experiment.duration)-Avg(control.duration)&lt;=0</font></center></h2>"
+    "<h2><center><p><font color='blue'>Test that average duration for the group <font color='crimson'>experiment</font> is bigger than the average duration in group <font color='crimson'>control</font>:<br><em><font color='crimson'>Alternative:</font> \n",
+    "Avg(Experiment.duration)-Avg(control.duration)&gt;0</em><br><em><font color='crimson'>Null</font> \n",
+    "Avg(Experiment.duration)-Avg(control.duration)&lt;=0</em></font></p></center></h2>"
    ]
   },
   {
