--- a/YehiaHesham/Assignment 11 Statistics Revision .ipynb
+++ b/YehiaHesham/Assignment 11 Statistics Revision .ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0087ec18",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import statistics as stat \n",
-    "import collections as c \n",
-    "data = pd.read_csv('Assignment_11_Salary_Data.csv')"
-   ]
+    "import numpy as np\r\n",
+    "import pandas as pd\r\n",
+    "import statistics as stat \r\n",
+    "import collections as c \r\n",
+    "data = pd.read_csv('Salary_Data.csv')"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5689992c",
-   "metadata": {},
+   "source": [
+    "data"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -234,22 +235,21 @@
        "29             10.5  121872.0"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
-   "source": [
-    "data"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "65f4371e",
-   "metadata": {},
+   "source": [
+    "data[['YearsExperience']][0:5]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -307,22 +307,21 @@
        "4              2.2"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "data[['YearsExperience']][0:5]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "24a69695",
-   "metadata": {},
+   "source": [
+    "data.describe()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -404,22 +403,21 @@
        "max          10.500000  122391.000000"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "data.describe()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d0370db3",
-   "metadata": {},
+   "source": [
+    "data.describe()[data.describe().index=='mean'] #mean\r\n"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -459,22 +457,21 @@
        "mean         5.313333  76003.0"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "data.describe()[data.describe().index=='mean'] #mean\n"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "7ccc55f7",
-   "metadata": {},
+   "source": [
+    "data.describe()[data.describe().index== '50%'] #Median"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -514,42 +511,41 @@
        "50%              4.7  65237.0"
       ]
      },
-     "execution_count": 56,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 56
     }
    ],
-   "source": [
-    "data.describe()[data.describe().index== '50%'] #Median"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "d3cd355c",
-   "metadata": {},
+   "source": [
+    "print(\"Mode YearsExperience : \",stat.mode(data['YearsExperience'])) #mode\n",
+    "print(\"Mode Salary : \",stat.mode(data['Salary']))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Mode YearsExperience :  3.2\n",
       "Mode Salary :  39343.0\n"
      ]
     }
    ],
-   "source": [
-    "print(\"Mode YearsExperience : \",stat.mode(data['YearsExperience'])) #mode\n",
-    "print(\"Mode Salary : \",stat.mode(data['Salary']))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2dacbe2c",
-   "metadata": {},
+   "source": [
+    "#mode of years Experience\n",
+    "data['YearsExperience'].mode()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0    3.2\n",
@@ -557,23 +553,22 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
-   "source": [
-    "#mode of years Experience\n",
-    "data['YearsExperience'].mode()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "7db61409",
-   "metadata": {},
+   "source": [
+    "#mode of Salary\n",
+    "data['Salary'].mode()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0      37731.0\n",
@@ -609,23 +604,22 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 20
     }
    ],
-   "source": [
-    "#mode of Salary\n",
-    "data['Salary'].mode()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "3f037fd8",
-   "metadata": {},
+   "source": [
+    "#mode of yearsExperience/Salary\n",
+    "data[['YearsExperience','Salary']].mode()"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -839,23 +833,24 @@
        "29              NaN  122391.0"
       ]
      },
-     "execution_count": 45,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 45
     }
    ],
-   "source": [
-    "#mode of yearsExperience/Salary\n",
-    "data[['YearsExperience','Salary']].mode()"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "5a22e81e",
-   "metadata": {},
+   "source": [
+    "#another solution to calucate the mode of YearsExperience/Salary\n",
+    "mode = c.Counter(data.T)\n",
+    "test = mode.most_common()\n",
+    "data[data.index==test[0][0]]"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -895,25 +890,21 @@
        "0              1.1  39343.0"
       ]
      },
-     "execution_count": 66,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 66
     }
    ],
-   "source": [
-    "#another solution to calucate the mode of YearsExperience/Salary\n",
-    "mode = c.Counter(data.T)\n",
-    "test = mode.most_common()\n",
-    "data[data.index==test[0][0]]"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "aa417454",
-   "metadata": {},
+   "source": [
+    "data.describe()[data.describe().index=='std'] #standard Deviation "
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -953,50 +944,55 @@
        "std         2.837888  27414.429785"
       ]
      },
-     "execution_count": 67,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 67
     }
    ],
-   "source": [
-    "data.describe()[data.describe().index=='std'] #standard Deviation "
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "de81f2c2",
-   "metadata": {},
+   "source": [
+    "print(\"YearsExperience Correlation Coefficient: \", np.corrcoef(data['YearsExperience']))\n",
+    "print(\"Salary Correlation Coefficient: \", np.corrcoef(data['Salary']))"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "YearsExperience Correlation Coefficient:  1.0\n",
       "Salary Correlation Coefficient:  1.0\n"
      ]
     }
    ],
-   "source": [
-    "print(\"YearsExperience Correlation Coefficient: \", np.corrcoef(data['YearsExperience']))\n",
-    "print(\"Salary Correlation Coefficient: \", np.corrcoef(data['Salary']))"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a3e13be7",
-   "metadata": {},
+   "source": [
+    "#If you don't transpose the 2d array, the method interprets row as vector, so in your first few cases,\n",
+    "#it calculates the correlation coefficients of all the combinations of the rows, since each row is length 2 vector,\n",
+    "#you get all 1 as coefficients, which would happen when you try to fit a line with two points (always perfect fit).\n",
+    "#src:\n",
+    "#    https://stackoverflow.com/questions/44333504/np-corrcoef-behavior-with-pandas-dataframes\n",
+    "\n",
+    "print(\"YearsExperience/Salary Correlation Coefficient of first 10 entries: \\n\") \n",
+    "np.corrcoef(data[['YearsExperience','Salary']])"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "YearsExperience/Salary Correlation Coefficient of first 10 entries: \n",
       "\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
@@ -1061,29 +1057,21 @@
        "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.]])"
       ]
      },
-     "execution_count": 69,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 69
     }
    ],
-   "source": [
-    "#If you don't transpose the 2d array, the method interprets row as vector, so in your first few cases,\n",
-    "#it calculates the correlation coefficients of all the combinations of the rows, since each row is length 2 vector,\n",
-    "#you get all 1 as coefficients, which would happen when you try to fit a line with two points (always perfect fit).\n",
-    "#src:\n",
-    "#    https://stackoverflow.com/questions/44333504/np-corrcoef-behavior-with-pandas-dataframes\n",
-    "\n",
-    "print(\"YearsExperience/Salary Correlation Coefficient of first 10 entries: \\n\") \n",
-    "np.corrcoef(data[['YearsExperience','Salary']])"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "fae2d14b",
-   "metadata": {},
+   "source": [
+    "data.T"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1201,53 +1189,51 @@
        "[2 rows x 30 columns]"
       ]
      },
-     "execution_count": 70,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 70
     }
    ],
-   "source": [
-    "data.T"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7b1bc99c",
-   "metadata": {},
+   "source": [
+    "print(\"YearsExperience/Salary Correlation Coefficient of all entries: \\n\") \n",
+    "np.corrcoef(data.T)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "YearsExperience/Salary Correlation Coefficient of all entries: \n",
       "\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[1.        , 0.97824162],\n",
        "       [0.97824162, 1.        ]])"
       ]
      },
-     "execution_count": 72,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 72
     }
    ],
-   "source": [
-    "print(\"YearsExperience/Salary Correlation Coefficient of all entries: \\n\") \n",
-    "np.corrcoef(data.T)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c6085a08",
-   "metadata": {},
+   "source": [
+    "data[0:10].T"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -1321,52 +1307,47 @@
        "Salary           60150.0  54445.0  64445.0  57189.0  "
       ]
      },
-     "execution_count": 73,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 73
     }
    ],
-   "source": [
-    "data[0:10].T"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "f0b6c74f",
-   "metadata": {},
+   "source": [
+    "print(\"YearsExperience/Salary Correlation Coefficient of first 10 entries: \\n\") \n",
+    "np.corrcoef(data[0:10].T)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "YearsExperience/Salary Correlation Coefficient of first 10 entries: \n",
       "\n"
      ]
     },
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "array([[1.        , 0.84680069],\n",
        "       [0.84680069, 1.        ]])"
       ]
      },
-     "execution_count": 74,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 74
     }
    ],
-   "source": [
-    "print(\"YearsExperience/Salary Correlation Coefficient of first 10 entries: \\n\") \n",
-    "np.corrcoef(data[0:10].T)"
-   ]
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1378,7 +1359,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.6"
+  },
+  "interpreter": {
+   "hash": "829e4e434e4ff341246e70d39d0503d3f0ae568302731c58bb5d8f747ac7b856"
   }
  },
  "nbformat": 4,
