--- a/YehiaHesham/Assignment 12 inferential Statistics .ipynb
+++ b/YehiaHesham/Assignment 12 inferential Statistics .ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\r\n",
     "import matplotlib.pyplot as plt\r\n",
-    "data = pd.read_csv(\"Assignment_12_ab_data.csv\")"
+    "data = pd.read_csv(\"ab_data.csv\")"
    ],
    "outputs": [],
    "metadata": {}
@@ -1858,7 +1858,7 @@
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.8 64-bit ('base': conda)"
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1870,10 +1870,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.6"
   },
   "interpreter": {
-   "hash": "c4fe93c353a7af9190848c25b2f1bb44cc6fb8e4f128d135874af398bee02ff2"
+   "hash": "829e4e434e4ff341246e70d39d0503d3f0ae568302731c58bb5d8f747ac7b856"
   }
  },
  "nbformat": 4,
